# codex-cli-linker

./: .coveragerc  .gitignore  CHANGELOG_TMP.md  CMakeLists.txt  Dockerfile  Makefile  README.md  agents.md  changelog.md  cli.py  codex-cli-linker.py  codex-lmstudio-linker.py  config.toml.example  coverage.xml  detect.py  development.md  docker-compose.yml  io_safe.py  pyproject.toml  quickstart.md  readme.md  render.py  spec.md  spec.py
.github/legacy-workflows/: build.yml  ci.yml  format.yml  lint.yml  rolling.yml  test.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  format.yml  homebrew.yml  lint.yml  publish.yml  release.yml  rolling.yml  scoop.yml  test.yml
Formula/: codex-cli-linker.rb
assets/: image-gen-prompt.md
codex-cli-docs/: advanced.md  general.conf.md  profiles.conf.md  providers.conf.md
dist_local/: codex_cli_linker-0.1.1-py3-none-any.whl
docs/: homebrew.md  scoop.md
docs/release-notes/: v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.2.0.md
modules/: CodexLinker.psm1
scoop/: codex-cli-linker.json
scripts/: pypi_venv_run.ps1  pypi_venv_run.sh  run.ps1  run.sh  set_env.bat  set_env.sh  tag_release.ps1  tag_release.sh
src/codex_linker/: __init__.py  args.py  args_backups.py  args_general.py  args_mcp.py  args_profiles.py  auth_flow.py  cli.py  config_utils.py  detect.py  doctor.py  emit.py  guided_pipeline.py  impl.py  io_safe.py  keychain.py  logging_utils.py  main_flow.py  migrate.py  output_writer.py  prompts.py  render.py  spec.py  state.py  ui.py  updates.py  updates_helpers.py  utils.py
src/codex_linker/argsets/: __init__.py  backups.py  files.py  general.py  mcp.py  model.py  other.py  profiles.py  providers.py
src/codex_linker/flows/: __init__.py  context_flow.py  editor_flow.py  model_flow.py  provider_flow.py  startup.py  stateflow.py  summary_flow.py
src/codex_linker/prompts/: __init__.py  base_pick.py  hub.py  input_utils.py  mcp.py  profiles.py  profiles_edit.py  providers.py
src/codex_linker/updatesets/: __init__.py  check.py  detect.py  report.py  sources.py  types.py  version.py
tests/: test_async_and_detect.py  test_backup.py  test_binaries_runtime.py  test_color_support.py  test_config_url.py  test_detect_parallel.py  test_docker_compose.py  test_dockerfile.py  test_doctor.py  test_dry_run.py  test_dry_run_and_io.py  test_entrypoints.py  test_env_key.py  test_full_auto.py  test_interactive_and_utils.py  test_keychain_and_providers.py  test_keychain_backends.py  test_launch_codex.py  test_logging.py  test_main_and_logging.py  test_more_coverage.py  test_more_coverage_extra.py  test_new_features.py  test_open_config.py  test_state.py  test_to_toml.py  test_to_yaml.py  test_toml_emitter_full.py  test_updates.py  test_utils_http_and_provider.py  test_version.py
