[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-cli-linker"
version = "0.1.1"
description = "Simple CLI that links Codex configuration to local servers"
readme = "readme.md"
license = "MIT"
authors = [{name = "Mariana"}]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
  "black",
  "pytest",
  "pytest-cov",
  "pytest-timeout",
  "ruff",
]

[tool.setuptools]
# Install the script as a console script-like entry (no importable package)
scripts = ["codex-cli-linker.py"]

[tool.pytest.ini_options]
addopts = "--cov=codex_cli_linker --cov-report=term-missing --timeout=20 --timeout-method=thread"
testpaths = ["tests"]
