[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-cli-linker"
version = "0.1.2"
description = "Simple CLI that links Codex configuration to local servers"
readme = "readme.md"
license = "MIT"
authors = [{name = "Mariana"}]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
  "black",
  "pytest",
  "pytest-cov",
  "pytest-timeout",
  "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
codex-cli-linker = "codex_linker:main"

[tool.pytest.ini_options]
addopts = "--cov=codex_cli_linker --cov=codex_linker.impl --cov-report=term-missing --timeout=20 --timeout-method=thread"
testpaths = ["tests"]
