[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-cli-linker"
version = "0.1.3"
description = "Simple CLI that links Codex configuration to local servers"
readme = "readme.md"
license = "MIT"
authors = [{name = "Mariana"}]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
  "black",
  "pytest",
  "pytest-cov",
  "pytest-timeout",
  "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
codex-cli-linker = "codex_linker:main"

[tool.pytest.ini_options]
addopts = "--cov=codex_cli_linker --cov=codex_linker --cov-report=term-missing --timeout=20 --timeout-method=thread"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E402: module level import not at top of file
# Many modules intentionally place __future__ imports before the module docstring
# or include small top-level strings for help text. Ignore E402 to reduce noise.
ignore = ["E402"]
